style: fix color for size/cancel labels
It will be almost invisible with the background otherwise.

[endlessm/eos-shell#5789]

--- a/data/eos-app-store.css
+++ b/data/eos-app-store.css
@@ -171,7 +171,7 @@
 
 .installed-app-box .app-size,
 .installed-app-box .cancel-label {
-    color: alpha(#484848, 0.69);
+    color: #9b9b9b;
 }
 
 .installed-app-box .app-updating {
